src/test/deca/context/valid/variables/multi_variables_use.deca
// Description:
//    Test de fonction des int avec float 
//
// Resultats:
//    Lexeur: pas d'erreur
//    Parseur: pas d'erreur 
//    context : pas d'erreur 
//
// Historique:
//    cree le 12/01/2022
{
    int x , y  ;
    float  z ; 
    x = 2 ; 
    y = 3 ; 
    z = x + y ;
    print(z) ;
}